WIP undestanding node-glob

--- a/src/components/head/head.pug
+++ b/src/components/head/head.pug
@@ -10,5 +10,5 @@ head
 	meta(name='keywords' content=pageKeywords || '')
 	base(href="/")
 	link(rel='shortcut icon' href='/assets/images/favicon.ico' type='image/x-icon')
-	link(href='/assets/styles/vendors.css' rel='stylesheet')
-	link(href='/assets/styles/app.css' rel='stylesheet')
+	link(href='css/vendor.css' rel='stylesheet')
+	link(href='css/style.css' rel='stylesheet')
