--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,3 +1,7 @@
+include ../nav/nav.pug
+
 mixin header()
     +b.header&attributes(attributes)
-        | header
+        +e.A.logo(href="/")
+            +e.IMG.logo-img(src="images/logo.png")
+        +nav.__nav
