--- a/src/components/_block-import.scss
+++ b/src/components/_block-import.scss
@@ -5,3 +5,6 @@
 @import "src/components/nav/nav";
 @import "src/components/footer/footer";
 @import "src/components/scripts/scripts";
+@import "src/components/button-with-icon/button-with-icon";
+@import "src/components/header-phone/header-phone";
+@import "src/components/header-callback/header-callback";
