--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,7 +1,16 @@
 include ../nav/nav.pug
+include ../button-with-icon/button-with-icon.pug
+include ../header-phone/header-phone.pug
+include ../header-callback/header-callback.pug
 
 mixin header()
     +b.header&attributes(attributes)
-        +e.A.logo(href="/")
-            +e.IMG.logo-img(src="images/logo.png")
-        +nav.__nav
+        +e.row
+            +e.A.logo(href="/")
+                +e.IMG.logo-img(src="images/logo.png")
+            +e.inner
+                +button-with-icon('Забронировать столик', '#', 'icon-wedding-dinner').__book-btn
+                +header-callback
+                +header-phone
+                +nav.__nav
+                +button-with-icon('Заказать пиццу', '#', 'icon-pizza-top').__order-btn
