--- a/src/components/_block-import.scss
+++ b/src/components/_block-import.scss
@@ -8,3 +8,4 @@
 @import "src/components/button-with-icon/button-with-icon";
 @import "src/components/header-phone/header-phone";
 @import "src/components/header-callback/header-callback";
+@import "src/components/top-slider/top-slider";
