--- a/src/components/header-phone/_header-phone.scss
+++ b/src/components/header-phone/_header-phone.scss
@@ -4,5 +4,7 @@
         display: block;
         @include set-font-size(32px);
         color: $white-text;
+        font-weight: bold;
+        line-height: 1;
     }
 }
