--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,8 @@
 @import './project/variables';
 @import './project/mixins';
-@import '../../node_modules/bootstrap/scss/bootstrap';
+@import '../../node_modules/bootstrap/scss/bootstrap-reboot';
+@import '../../node_modules/bootstrap/scss/bootstrap-grid';
+@import './project/commoms';
 @import '../components/block-import';
 
 body {
