--- a/src/components/header-callback/_header-callback.scss
+++ b/src/components/header-callback/_header-callback.scss
@@ -1,11 +1,17 @@
 .header-callback {
     display: flex;
-    @include set-font-size(14px);
+    @include set-font-size(13px);
     @include png-icon-before('../images/viber-icon.png', 28px, 28px);
     color: $white-text;
     text-transform: uppercase;
+    margin-left: auto;
+    margin-right: 20px;
     line-height: 1.1;
     span {
         margin-left: 5px;
+    }
+    &:hover {
+        color: darken($white-text, 30%);
+        text-decoration: none;
     }
 }
