--- a/src/components/nav/_nav.scss
+++ b/src/components/nav/_nav.scss
@@ -5,6 +5,28 @@
         justify-content: space-between;
     }
     &__item {
-
+        padding-left: 13px;
+        padding-right: 13px;
+    }
+    &__link {
+        font-size: 18px;
+        font-weight: bold;
+        color: $white-text;
+        text-transform: uppercase;
+        padding-bottom: 3px;
+        &:hover {
+            text-decoration: none;
+            color: $white-text;
+            position: relative;
+            &::after {
+                position: absolute;
+                content: '';
+                width: 100%;
+                height: 3px;
+                background-color: $secondary-accent;
+                bottom: 0;
+                left: 0;
+            }
+        }
     }
 }
