--- a/src/css/project/_variables.scss
+++ b/src/css/project/_variables.scss
@@ -1,3 +1,10 @@
 $primary-accent: #53d11c;
 $secondary-accent: #fc4866;
 $white-text: #fff;
+
+$container-max-widths: (
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1280px
+  );
