WIP add some blocks

--- a/src/components/_block-import.scss
+++ b/src/components/_block-import.scss
@@ -9,3 +9,5 @@
 @import "src/components/header-phone/header-phone";
 @import "src/components/header-callback/header-callback";
 @import "src/components/top-slider/top-slider";
+@import "src/components/events/events";
+@import "src/components/events-list/events-list";
