--- a/src/components/_block-import.scss
+++ b/src/components/_block-import.scss
@@ -11,3 +11,5 @@
 @import "src/components/top-slider/top-slider";
 @import "src/components/events/events";
 @import "src/components/events-list/events-list";
+@import "src/components/categories/categories";
+@import "src/components/category-card/category-card";
