--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,8 +1,10 @@
 extends /components/layout-default/layout-default.pug
 include /components/events/events.pug
 include /components/top-slider/top-slider.pug
+include /components/categories/categories.pug
 
 block header
   +top-slider
 block content
   +events
+  +categories
