Add some blocks

--- a/src/components/_block-import.scss
+++ b/src/components/_block-import.scss
@@ -13,3 +13,8 @@
 @import "src/components/events-list/events-list";
 @import "src/components/categories/categories";
 @import "src/components/category-card/category-card";
+@import "src/components/info/info";
+@import "src/components/info-about/info-about";
+@import "src/components/info-reviews/info-reviews";
+@import "src/components/info-jobs/info-jobs";
+@import "src/components/info-partners/info-partners";
