--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -2,9 +2,11 @@ extends /components/layout-default/layout-default.pug
 include /components/events/events.pug
 include /components/top-slider/top-slider.pug
 include /components/categories/categories.pug
+include /components/info/info.pug
 
 block header
   +top-slider
 block content
   +events
   +categories
+  +info
